--- a/index.html
+++ b/index.html
@@ -33,6 +33,43 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <main>localhost</main>
+    <main class="main-a">
+      <div class="container">
+        <svg class="users"></svg>
+        <p>
+            <h1>users - solid</h1>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis
+          necessitatibus, doloremque nostrum beatae aliquam deserunt ullam error
+          numquam corporis ipsam.
+        </p>
+      </div>
+      <div class="container">
+        <svg class="apple"></svg>
+        <p>
+            <h1>cc - apple - pay - brands</h1>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore,
+          obcaecati. Ullam, odio doloribus. Exercitationem, dolore quisquam non
+          minima dignissimos quo.
+        </p>
+      </div>
+      <div class="container">
+        <svg class="university" ></svg>
+        <p>
+            <h1>university - solid</h1>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, ipsum?
+          Perferendis aliquid at nihil quos laborum explicabo neque corporis
+          iste!
+        </p>
+      </div>
+      <div class="container">
+        <svg class="random"></svg>
+        <p>
+            <h1>random - solid</h1>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam,
+          ducimus libero laudantium odit placeat possimus accusamus ullam magni
+          dolorum corrupti?
+        </p>
+      </div>
+    </main>
   </body>
 </html>
