--- a/index.html
+++ b/index.html
@@ -35,36 +35,44 @@
   <body>
     <main class="main-a">
       <div class="container">
-        <svg class="users"></svg>
+        <svg class="users">
+          <div class="circle"><span class="in1">1</span></div>
+        </svg>
+        <h1>users - solid</h1>
         <p>
-            <h1>users - solid</h1>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis
           necessitatibus, doloremque nostrum beatae aliquam deserunt ullam error
           numquam corporis ipsam.
         </p>
       </div>
       <div class="container">
-        <svg class="apple"></svg>
+        <svg class="apple">
+          <div class="circle"><span class="in2">2</span></div>
+        </svg>
+        <h1>cc - apple - pay - brands</h1>
         <p>
-            <h1>cc - apple - pay - brands</h1>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore,
           obcaecati. Ullam, odio doloribus. Exercitationem, dolore quisquam non
           minima dignissimos quo.
         </p>
       </div>
       <div class="container">
-        <svg class="university" ></svg>
+        <svg class="university">
+          <div class="circle"><span class="in3">3</span></div>
+        </svg>
+        <h1>university - solid</h1>
         <p>
-            <h1>university - solid</h1>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, ipsum?
           Perferendis aliquid at nihil quos laborum explicabo neque corporis
           iste!
         </p>
       </div>
       <div class="container">
-        <svg class="random"></svg>
+        <svg class="random">
+          <div class="circle"><span class="in4">4</span></div>
+        </svg>
+        <h1>random - solid</h1>
         <p>
-            <h1>random - solid</h1>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam,
           ducimus libero laudantium odit placeat possimus accusamus ullam magni
           dolorum corrupti?
